Added my own stuff

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 // COLORS
 $primary-color: #02aab0;
 $secondary-color: #00cdac;
+$tertiary-color: #007B87;
+$fourth-color: #7C0251;
+$fifth-color: #ED5150;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
