--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -53,3 +53,19 @@ a:hover {
     transform: translateX(2px);
   }
 }
+
+.text-color-secondary {
+  background-image: linear-gradient(135deg, $tertiary-color 0%, $fourth-color 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  // Responsive text purple style
+  @include respond(phone) {
+    background-image: none;
+    -webkit-text-fill-color: $secondary-color;
+  }
+
+  &:hover {
+    transform: translateX(2px);
+  }
+}
