--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -25,16 +25,16 @@
 .cta-btn--hero {
   background-image: linear-gradient(
     135deg,
-    $primary-color 0%,
-    $secondary-color 100%
+    $tertiary-color 0%,
+    $fourth-color 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   border: 2px solid transparent;
   border-image: linear-gradient(
     135deg,
-    $primary-color 0%,
-    $secondary-color 100%
+    $tertiary-color 0%,
+    $fourth-color 100%
   );
   border-image-slice: 1;
   // Responsive Button hero style
@@ -47,8 +47,8 @@
   &::after {
     background-image: linear-gradient(
       135deg,
-      $primary-color 0%,
-      $secondary-color 100%
+      $tertiary-color 0%,
+      $fourth-color 100%
     );
     // Responsive Button hero style
     @include respond(phone) {
@@ -81,6 +81,25 @@
 
   &:hover {
     color: $secondary-color;
+    text-decoration: none;
+
+    &::after {
+      width: 100%;
+    }
+  }
+}
+
+/* Resume Style */
+.cta-btn--proj {
+  color: $fifth-color;
+  border: 2px solid $fifth-color;
+
+  &::after {
+    background: $fifth-color;
+  }
+
+  &:hover {
+    color: $white-color;
     text-decoration: none;
 
     &::after {
