--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,5 +14,7 @@
 @import './sections/contact';
 @import './sections/hero';
 @import './sections/projects';
+@import './sections/work';
+@import './sections/skills';
 
 @import './vendor/css/font-awesome.min.css';
