--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -53,6 +53,8 @@
     margin-bottom: 3.2rem;
     text-align: left;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 
     @include respond(tab-land) {
       font-size: 4rem;
@@ -68,6 +70,10 @@
     @include respond(phone-xs) {
       font-size: 2.8rem;
     }
+  }
+
+  .Typewriter__wrapper {
+    overflow-wrap: break-word;
   }
 
   .hero-cta {
