--- a/src/style/sections/_skills.scss
+++ b/src/style/sections/_skills.scss
@@ -3,12 +3,13 @@
   color: $dark-blue-text;
   height: 100%;
   border-top: 0px;
-  padding-bottom: 15%;
+  padding-bottom: 15rem;
 
   @include respond(tab-land) {
     height: 100%;
     -webkit-clip-path: none;
     clip-path: none;
+    padding-bottom: 2rem;
   }
 
   .skills-wrapper {
@@ -31,11 +32,6 @@
       margin: 0 auto;
       background-color: $white-color;
       color: $fifth-color;
-      // background-image: linear-gradient(
-      //   135deg,
-      //   $fifth-color 0%,
-      //   $white-color 100%
-      // );
 
       @include respond(tab-land) {
         width: 100%;
@@ -43,7 +39,6 @@
       }
 
       border: 4px solid $fifth-color;
-      // border-radius: 5%;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
       transition: all 0.2s ease-out;
       box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
@@ -52,7 +47,6 @@
         0.5s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
 
       @include respond(phone) {
-        border: 1px solid $fifth-color;
         box-shadow: none;
         margin-bottom: 3.2rem;
       }
@@ -66,21 +60,21 @@
       flex-direction: column;
       font-weight: bold;
       margin-bottom: 3.8rem;
-      font-size: $mid-font-size;
 
       @include respond(phone) {
         align-items: center;
       }
 
       &-text {
+        font-size: $mid-font-size;
         text-align: center;
 
         @include respond(tab-port) {
-          font-size: 1.5rem;
+          font-size: 2rem;
           text-align: center;
         }
         @include respond(phone) {
-          font-size: 1.6rem;
+          font-size: 2rem;
           text-align: center;
         }
 
