--- a/src/style/sections/_work.scss
+++ b/src/style/sections/_work.scss
@@ -13,11 +13,14 @@
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 10%;
+  padding-bottom: 15rem;
 
   @include respond(tab-land) {
+    -webkit-clip-path: none;
+    clip-path: none;
     margin-top: 0;
     padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 
   .job-wrapper {
