--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -37,6 +37,12 @@
     $fourth-color 100%
   );
   border-image-slice: 1;
+  // Responsive Button hero style
+  @include respond(phone) {
+    background-image: none;
+    border: 2px solid $fourth-color;
+    -webkit-text-fill-color: $fourth-color;
+  }
 
   &::after {
     background-image: linear-gradient(
@@ -44,11 +50,19 @@
       $tertiary-color 0%,
       $fourth-color 100%
     );
+    // // Responsive Button hero style
+    @include respond(phone) {
+      background-image: none;
+    }
   }
 
   &:hover {
     -webkit-text-fill-color: $white-color;
     text-decoration: none;
+    // Responsive Button hover hero style
+    @include respond(phone) {
+      -webkit-text-fill-color: $fourth-color;
+    }
 
     &::after {
       width: 100%;
